@@ -1,4 +1,5 @@
 test-simple
+test-hex-int
 
 ###################
 # backup files
