@@ -5,11 +5,16 @@ include_HEADERS=src/eh-printf.h
 
 TESTS=$(check_PROGRAMS)
 check_PROGRAMS=\
+ test-hex-int \
  test-simple
 
-test_simple_SOURCES=tests/test-simple.c src/eh-printf.h
+T_COMMON_LDADD=libeh-printf.la -lecheck
 
-test_simple_LDADD=libeh-printf.la -lecheck
+test_simple_SOURCES=tests/test-simple.c src/eh-printf.h
+test_simple_LDADD=$(T_COMMON_LDADD)
+
+test_hex_int_SOURCES=tests/test-hex-int.c src/eh-printf.h
+test_hex_int_LDADD=$(T_COMMON_LDADD)
 
 ACLOCAL_AMFLAGS=-I m4 --install
 
@@ -35,3 +40,4 @@ spotless: clean
 
 valgrind: $(check_PROGRAMS)
 	libtool --mode=execute valgrind ./test-simple
+	libtool --mode=execute valgrind ./test-hex-int
